<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/terms_conditions" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/help_support" />
    </group>

    <item android:title="@string/connect_with_us">
        <menu>
            <item
                android:id="@+id/nav_instagram"
                android:icon="@drawable/ic_instagram"
                app:itemIconTint="@null"
            android:title="@string/instagram" />
            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook"
                app:itemIconTint="@null"
            android:title="@string/facebook" />
            <item
                android:id="@+id/nav_linkedin"
                android:icon="@drawable/ic_linkedin"
                app:itemIconTint="@null"
            android:title="@string/linkedn" />
            <item
                android:id="@+id/nav_youtube"
                android:icon="@drawable/ic_youtube"
                app:itemIconTint="@null"
            android:title="@string/youtube" />
        </menu>
    </item>
</menu>